--- a/login.html
+++ b/login.html
@@ -3,31 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - PPLG1</title>
+    <title>Login PPLG1</title>
     <style>
-        body { font-family: sans-serif; background: #f0f2f5; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
-        .login-box { background: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); width: 300px; }
-        h2 { text-align: center; color: #333; }
-        input { width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ddd; border-radius: 5px; box-sizing: border-box; }
-        button { width: 100%; padding: 10px; background: #007bff; border: none; color: white; border-radius: 5px; cursor: pointer; }
-        button:hover { background: #0056b3; }
-        .error { color: red; font-size: 12px; text-align: center; margin-top: 10px; }
+        body { font-family: sans-serif; background: #2c3e50; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
+        .login-box { background: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.3); width: 300px; text-align: center; }
+        h2 { color: #333; margin-bottom: 20px; }
+        input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 5px; box-sizing: border-box; }
+        button { width: 100%; padding: 12px; background: #2980b9; border: none; color: white; border-radius: 5px; cursor: pointer; font-weight: bold; }
+        button:hover { background: #1f6391; }
+        .error { color: #e74c3c; font-size: 12px; margin-top: 10px; }
     </style>
 </head>
 <body>
     <div class="login-box">
         <h2>LOGIN PPLG1</h2>
-        <input type="text" id="user" placeholder="Username">
+        <input type="text" id="user" placeholder="Nama Siswa/Guru">
         <input type="password" id="pass" placeholder="Password">
-        <button onclick="prosesLogin()">Masuk</button>
+        <button onclick="prosesLogin()">MASUK</button>
         <p id="pesan" class="error"></p>
     </div>
 
     <script>
-        // Simulasi Database PPLG1 di dalam localStorage
-        const db_pplg1 = [
-            {id: 1, user: "Heri", pass: "1234", nama: "Heri, S.Pd", role: "guru"},
-            {id: 2, user: "Rizki", pass: "1234", nama: "Rizki Juliansyah", role: "siswa"}
+        // Database Siswa & Guru
+        const db_users = [
+            {user: "Heri", pass: "1234", nama: "Heri, S.Pd", role: "guru"},
+            {user: "Apriyanto", pass: "1234", nama: "Apriyanto", role: "siswa"},
+            {user: "Dhieza", pass: "1234", nama: "Dhieza", role: "siswa"},
+            {user: "Hadi", pass: "1234", nama: "Hadi", role: "siswa"},
+            {user: "M.Rizki", pass: "1234", nama: "M. Rizki", role: "siswa"},
+            {user: "Rizki J", pass: "1234", nama: "Rizki J", role: "siswa"},
+            {user: "Revan", pass: "1234", nama: "Revan", role: "siswa"},
+            {user: "Dani", pass: "1234", nama: "Dani", role: "siswa"},
+            {user: "Iqbal", pass: "1234", nama: "Iqbal", role: "siswa"},
+            {user: "Ifkar", pass: "1234", nama: "Ifkar", role: "siswa"},
+            {user: "Wawan", pass: "1234", nama: "Wawan", role: "siswa"},
+            {user: "Diandra", pass: "1234", nama: "Diandra", role: "siswa"},
+            {user: "Ruri", pass: "1234", nama: "Ruri", role: "siswa"}
         ];
 
         function prosesLogin() {
@@ -35,13 +46,10 @@
             const p = document.getElementById("pass").value;
             const pesan = document.getElementById("pesan");
 
-            // Cari user di database
-            const akun = db_pplg1.find(a => a.user === u && a.pass === p);
+            const akun = db_users.find(a => a.user.toLowerCase() === u.toLowerCase() && a.pass === p);
 
             if (akun) {
-                // Simpan data login sementara agar bisa dipanggil di halaman lain
                 localStorage.setItem("userAktif", JSON.stringify(akun));
-                
                 if (akun.role === "guru") {
                     window.location.href = "halaman_guru.html";
                 } else {
@@ -54,4 +62,3 @@
     </script>
 </body>
 </html>
-
